[package]
name = "alarm"
version = "0.1.0"
authors = ["noelzubin <noelzubinvictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.64"
serde = { version="1.0.125", features=["derive"]}
dirs = "3.0.2"
structopt = "0.3.21"
prettytable-rs = "0.8.0"
notify-rust = "4.4.0"
